    on will turn off the "clean" flag and setting the "clean" flag on will
    turn off the "smart_compilation" flag. Also, setting the "debug" flag
    on will turn off both the "smart_compilation" and "clean" flags.

    Corrected a Logtalk compiler bug when the "source_data" flag is on with
    back-end Prolog compilers where is not possible to retrieve the position
    of a read term.

    Updated the ECLiPSe config file to detect when running on Windows 64
    bits systems and to ignore non-predicate and non-operator exports when
    pre-processing lib/1 directives.

    Updated the unit test framework to print more informative messages for
    failed unit tests.

    Added predicate split/4 (for splitting a list into sublists with a given
    length) to the "listp", "list", and "difflist" library entities.

    Updated the "cc" example with a definition for the shell/2 predicate for
    CxProlog.

    Changed the names of the objects in the "mi" example to avoid a name
    conflict when running the example unit tests.

    Corrected a bug in the Windows installer that prevented detection of
    YAP 64 bits versions. Thanks to Stepan Ipatov for the bug report.

    Updated the TextMate bundle to disable the automatic indent corrections
    introduced in the development version of TextMate 2.0.


2.44.0 - March 7, 2012

    Changed the semantics of complementing categories to allow patching both
    predicate declarations and predicate definitions of complemented objects.
    This is accomplished by ensuring that predicate declaration and definition
    lookups start at the complementing categories before looking into the
    complemented object itself or into its related entities.

    Updated the Logtalk compiler in order to generate a warning when compiling
    a complementing category for a complemented object that was compiled with
    support for complementing categories turned off.
